; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ivtv/extr_ivtv-alsa-pcm.c_snd_ivtv_pcm_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ivtv/extr_ivtv-alsa-pcm.c_snd_ivtv_pcm_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_ivtv_card = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, i32, i8*)* @snd_ivtv_pcm_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_ivtv_pcm_ioctl(%struct.snd_pcm_substream* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.snd_pcm_substream*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.snd_ivtv_card*, align 8
  %8 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %10 = call %struct.snd_ivtv_card* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %9)
  store %struct.snd_ivtv_card* %10, %struct.snd_ivtv_card** %7, align 8
  %11 = load %struct.snd_ivtv_card*, %struct.snd_ivtv_card** %7, align 8
  %12 = call i32 @snd_ivtv_lock(%struct.snd_ivtv_card* %11)
  %13 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @snd_pcm_lib_ioctl(%struct.snd_pcm_substream* %13, i32 %14, i8* %15)
  store i32 %16, i32* %8, align 4
  %17 = load %struct.snd_ivtv_card*, %struct.snd_ivtv_card** %7, align 8
  %18 = call i32 @snd_ivtv_unlock(%struct.snd_ivtv_card* %17)
  %19 = load i32, i32* %8, align 4
  ret i32 %19
}

declare dso_local %struct.snd_ivtv_card* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1

declare dso_local i32 @snd_ivtv_lock(%struct.snd_ivtv_card*) #1

declare dso_local i32 @snd_pcm_lib_ioctl(%struct.snd_pcm_substream*, i32, i8*) #1

declare dso_local i32 @snd_ivtv_unlock(%struct.snd_ivtv_card*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
